package com.browsers;

import org.openqa.selenium.WebDriver;

public interface Browser {
    public WebDriver initBrowser();
}
