package com.browsers;

import com.clients.AbstractWeb;
import org.openqa.selenium.WebDriver;

public class FireFox extends AbstractWeb {
    @Override
    public WebDriver initBrowser() {
        return null;
    }
}
