package com.clients;

import org.openqa.selenium.WebDriver;

public interface Client {
    public WebDriver initClient();
}
