package com.clients;

import org.openqa.selenium.WebDriver;

public class Desktop implements Client {
    @Override
    public WebDriver initClient() {
        return null;
    }
}
