package com.clients;

import org.openqa.selenium.WebDriver;

public class Mobile implements Client {
    @Override
    public WebDriver initClient() {
        return null;
    }
}
